@@ -1,5 +1,7 @@
 *SVN*
 
+* Normalize line endings in outgoing mail bodies to "\n" #1536 [John Long]
+
 * Allow template to be explicitly specified #1448 [tuxie@dekadance.se]
 
 * Allow specific "multipart/xxx" content-type to be set on multipart messages #1412 [Flurin Egger]
